RESOLVED FIXED79616
LayoutTests/fast/xpath/xpath-functional-test.html is crashing in the DFG
https://bugs.webkit.org/show_bug.cgi?id=79616
Summary LayoutTests/fast/xpath/xpath-functional-test.html is crashing in the DFG
Filip Pizlo
Reported 2012-02-26 19:00:01 PST
It's because JSValue().isCell() == true. The DFG::AbstractValue::validate() code should guard against this.
Attachments
the patch (1.33 KB, patch)
2012-02-26 19:01 PST, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2012-02-26 19:01:39 PST
Created attachment 128940 [details] the patch
Filip Pizlo
Comment 2 2012-02-26 20:08:24 PST
Filip Pizlo
Comment 3 2012-02-26 20:08:34 PST
Note You need to log in before you can comment on or make changes to this bug.