LayoutTests/fast/xpath/xpath-functional-test.html is crashing in the DFG https://bugs.webkit.org/show_bug.cgi?id=79616

Reviewed by Oliver Hunt.

Guard against the fact that in JSVALUE64, JSValue().isCell() == true.

* dfg/DFGAbstractValue.h:
(JSC::DFG::AbstractValue::validate):



Canonical link: https://commits.webkit.org/96720@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108950 268f45cc-cd09-0410-ab3c-d52691b4dbfc